[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/floor_tile_base.png" type="Texture" id=1]
[ext_resource path="res://scenes/floor/FloorPanel.gd" type="Script" id=2]

[node name="FloorPanel" type="Area2D"]
z_index = -2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, -62, 125, -2, -1, 61, -122, 0 )

[connection signal="body_entered" from="." to="." method="_on_FloorPanel_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FloorPanel_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_FloorPanel_mouse_entered"]
